isl-rs/src/constraint.rs

use crate::*;

extern "C" {
  pub fn isl_constraint_list_get_ctx(list: ConstraintListRef) -> Option<CtxRef>;
  pub fn isl_constraint_list_from_constraint(el: Constraint) -> Option<ConstraintList>;
  pub fn isl_constraint_list_alloc(ctx: CtxRef, n: c_int) -> Option<ConstraintList>;
  pub fn isl_constraint_list_copy(list: ConstraintListRef) -> Option<ConstraintList>;
  pub fn isl_constraint_list_free(list: ConstraintList) -> *mut c_void;
  pub fn isl_constraint_list_add(list: ConstraintList, el: Constraint) -> Option<ConstraintList>;
  pub fn isl_constraint_list_insert(list: ConstraintList, pos: c_uint, el: Constraint) -> Option<ConstraintList>;
  pub fn isl_constraint_list_drop(list: ConstraintList, first: c_uint, n: c_uint) -> Option<ConstraintList>;
  pub fn isl_constraint_list_clear(list: ConstraintList) -> Option<ConstraintList>;
  pub fn isl_constraint_list_swap(list: ConstraintList, pos1: c_uint, pos2: c_uint) -> Option<ConstraintList>;
  pub fn isl_constraint_list_reverse(list: ConstraintList) -> Option<ConstraintList>;
  pub fn isl_constraint_list_concat(list1: ConstraintList, list2: ConstraintList) -> Option<ConstraintList>;
  pub fn isl_constraint_list_size(list: ConstraintListRef) -> c_int;
  pub fn isl_constraint_list_n_constraint(list: ConstraintListRef) -> c_int;
  pub fn isl_constraint_list_get_at(list: ConstraintListRef, index: c_int) -> Option<Constraint>;
  pub fn isl_constraint_list_get_constraint(list: ConstraintListRef, index: c_int) -> Option<Constraint>;
  pub fn isl_constraint_list_set_constraint(list: ConstraintList, index: c_int, el: Constraint) -> Option<ConstraintList>;
  pub fn isl_constraint_list_foreach(list: ConstraintListRef, fn_: unsafe extern "C" fn(el: Constraint, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_constraint_list_every(list: ConstraintListRef, test: unsafe extern "C" fn(el: ConstraintRef, user: *mut c_void) -> Bool, user: *mut c_void) -> Bool;
  pub fn isl_constraint_list_map(list: ConstraintList, fn_: unsafe extern "C" fn(el: Constraint, user: *mut c_void) -> Option<Constraint>, user: *mut c_void) -> Option<ConstraintList>;
  pub fn isl_constraint_list_sort(list: ConstraintList, cmp: unsafe extern "C" fn(a: ConstraintRef, b: ConstraintRef, user: *mut c_void) -> c_int, user: *mut c_void) -> Option<ConstraintList>;
  pub fn isl_constraint_list_foreach_scc(list: ConstraintListRef, follows: unsafe extern "C" fn(a: ConstraintRef, b: ConstraintRef, user: *mut c_void) -> Bool, follows_user: *mut c_void, fn_: unsafe extern "C" fn(scc: ConstraintList, user: *mut c_void) -> Stat, fn_user: *mut c_void) -> Stat;
  pub fn isl_constraint_list_to_str(list: ConstraintListRef) -> Option<CString>;
  pub fn isl_printer_print_constraint_list(p: Printer, list: ConstraintListRef) -> Option<Printer>;
  pub fn isl_constraint_list_dump(list: ConstraintListRef) -> ();
  pub fn isl_constraint_get_ctx(c: ConstraintRef) -> Option<CtxRef>;
  pub fn isl_constraint_alloc_equality(ls: LocalSpace) -> Option<Constraint>;
  pub fn isl_constraint_alloc_inequality(ls: LocalSpace) -> Option<Constraint>;
  pub fn isl_equality_alloc(ls: LocalSpace) -> Option<Constraint>;
  pub fn isl_inequality_alloc(ls: LocalSpace) -> Option<Constraint>;
  pub fn isl_constraint_copy(c: ConstraintRef) -> Option<Constraint>;
  pub fn isl_constraint_free(c: Constraint) -> *mut c_void;
  pub fn isl_basic_map_n_constraint(bmap: BasicMapRef) -> c_int;
  pub fn isl_basic_set_n_constraint(bset: BasicSetRef) -> c_int;
  pub fn isl_basic_map_foreach_constraint(bmap: BasicMapRef, fn_: unsafe extern "C" fn(c: Constraint, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_basic_set_foreach_constraint(bset: BasicSetRef, fn_: unsafe extern "C" fn(c: Constraint, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_basic_map_get_constraint_list(bmap: BasicMapRef) -> Option<ConstraintList>;
  pub fn isl_basic_set_get_constraint_list(bset: BasicSetRef) -> Option<ConstraintList>;
  pub fn isl_constraint_is_equal(constraint1: ConstraintRef, constraint2: ConstraintRef) -> c_int;
  pub fn isl_basic_set_foreach_bound_pair(bset: BasicSetRef, type_: DimType, pos: c_uint, fn_: unsafe extern "C" fn(lower: Constraint, upper: Constraint, bset: BasicSet, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_basic_map_add_constraint(bmap: BasicMap, constraint: Constraint) -> Option<BasicMap>;
  pub fn isl_basic_set_add_constraint(bset: BasicSet, constraint: Constraint) -> Option<BasicSet>;
  pub fn isl_map_add_constraint(map: Map, constraint: Constraint) -> Option<Map>;
  pub fn isl_set_add_constraint(set: Set, constraint: Constraint) -> Option<Set>;
  pub fn isl_basic_map_has_defining_equality(bmap: BasicMapRef, type_: DimType, pos: c_int, c: *mut Constraint) -> Bool;
  pub fn isl_basic_set_has_defining_equality(bset: BasicSetRef, type_: DimType, pos: c_int, constraint: *mut Constraint) -> Bool;
  pub fn isl_basic_set_has_defining_inequalities(bset: BasicSetRef, type_: DimType, pos: c_int, lower: *mut Constraint, upper: *mut Constraint) -> Bool;
  pub fn isl_constraint_get_space(constraint: ConstraintRef) -> Option<Space>;
  pub fn isl_constraint_get_local_space(constraint: ConstraintRef) -> Option<LocalSpace>;
  pub fn isl_constraint_dim(constraint: ConstraintRef, type_: DimType) -> c_int;
  pub fn isl_constraint_involves_dims(constraint: ConstraintRef, type_: DimType, first: c_uint, n: c_uint) -> Bool;
  pub fn isl_constraint_get_dim_name(constraint: ConstraintRef, type_: DimType, pos: c_uint) -> Option<CStr>;
  pub fn isl_constraint_get_constant_val(constraint: ConstraintRef) -> Option<Val>;
  pub fn isl_constraint_get_coefficient_val(constraint: ConstraintRef, type_: DimType, pos: c_int) -> Option<Val>;
  pub fn isl_constraint_set_constant_si(constraint: Constraint, v: c_int) -> Option<Constraint>;
  pub fn isl_constraint_set_constant_val(constraint: Constraint, v: Val) -> Option<Constraint>;
  pub fn isl_constraint_set_coefficient_si(constraint: Constraint, type_: DimType, pos: c_int, v: c_int) -> Option<Constraint>;
  pub fn isl_constraint_set_coefficient_val(constraint: Constraint, type_: DimType, pos: c_int, v: Val) -> Option<Constraint>;
  pub fn isl_constraint_get_div(constraint: ConstraintRef, pos: c_int) -> Option<Aff>;
  pub fn isl_constraint_negate(constraint: Constraint) -> Option<Constraint>;
  pub fn isl_constraint_is_equality(constraint: ConstraintRef) -> Bool;
  pub fn isl_constraint_is_div_constraint(constraint: ConstraintRef) -> Bool;
  pub fn isl_constraint_is_lower_bound(constraint: ConstraintRef, type_: DimType, pos: c_uint) -> Bool;
  pub fn isl_constraint_is_upper_bound(constraint: ConstraintRef, type_: DimType, pos: c_uint) -> Bool;
  pub fn isl_basic_map_from_constraint(constraint: Constraint) -> Option<BasicMap>;
  pub fn isl_basic_set_from_constraint(constraint: Constraint) -> Option<BasicSet>;
  pub fn isl_constraint_get_bound(constraint: ConstraintRef, type_: DimType, pos: c_int) -> Option<Aff>;
  pub fn isl_constraint_get_aff(constraint: ConstraintRef) -> Option<Aff>;
  pub fn isl_equality_from_aff(aff: Aff) -> Option<Constraint>;
  pub fn isl_inequality_from_aff(aff: Aff) -> Option<Constraint>;
  pub fn isl_constraint_plain_cmp(c1: ConstraintRef, c2: ConstraintRef) -> c_int;
  pub fn isl_constraint_cmp_last_non_zero(c1: ConstraintRef, c2: ConstraintRef) -> c_int;
  pub fn isl_printer_print_constraint(p: Printer, c: ConstraintRef) -> Option<Printer>;
  pub fn isl_constraint_dump(c: ConstraintRef) -> ();
}

#[repr(transparent)]
#[derive(Debug)]
pub struct Constraint(pub NonNull<c_void>);

#[repr(transparent)]
#[derive(Debug, Clone, Copy, Ord, PartialOrd, Eq, PartialEq, Hash)]
pub struct ConstraintRef(pub NonNull<c_void>);

impl_try!(Constraint);
impl_try!(ConstraintRef);

impl Constraint {
  #[inline(always)]
  pub fn read(&self) -> Constraint { unsafe { ptr::read(self) } }
  #[inline(always)]
  pub fn write(&self, x: Constraint) { unsafe { ptr::write(self as *const _ as _, x) } }
}

impl AsRef<ConstraintRef> for Constraint {
  #[inline(always)]
  fn as_ref(&self) -> &ConstraintRef { unsafe { mem::transmute(self) } }
}

impl Deref for Constraint {
  type Target = ConstraintRef;
  #[inline(always)]
  fn deref(&self) -> &ConstraintRef { self.as_ref() }
}

impl To<Option<Constraint>> for *mut c_void {
  #[inline(always)]
  unsafe fn to(self) -> Option<Constraint> { NonNull::new(self).map(Constraint) }
}

#[repr(transparent)]
#[derive(Debug)]
pub struct ConstraintList(pub NonNull<c_void>);

#[repr(transparent)]
#[derive(Debug, Clone, Copy, Ord, PartialOrd, Eq, PartialEq, Hash)]
pub struct ConstraintListRef(pub NonNull<c_void>);

impl_try!(ConstraintList);
impl_try!(ConstraintListRef);

impl ConstraintList {
  #[inline(always)]
  pub fn read(&self) -> ConstraintList { unsafe { ptr::read(self) } }
  #[inline(always)]
  pub fn write(&self, x: ConstraintList) { unsafe { ptr::write(self as *const _ as _, x) } }
}

impl AsRef<ConstraintListRef> for ConstraintList {
  #[inline(always)]
  fn as_ref(&self) -> &ConstraintListRef { unsafe { mem::transmute(self) } }
}

impl Deref for ConstraintList {
  type Target = ConstraintListRef;
  #[inline(always)]
  fn deref(&self) -> &ConstraintListRef { self.as_ref() }
}

impl To<Option<ConstraintList>> for *mut c_void {
  #[inline(always)]
  unsafe fn to(self) -> Option<ConstraintList> { NonNull::new(self).map(ConstraintList) }
}

impl Aff {
  #[inline(always)]
  pub fn equality_from_aff(self) -> Option<Constraint> {
    unsafe {
      let ret = isl_equality_from_aff(self.to());
      (ret).to()
    }
  }
  #[inline(always)]
  pub fn inequality_from_aff(self) -> Option<Constraint> {
    unsafe {
      let ret = isl_inequality_from_aff(self.to());
      (ret).to()
    }
  }
}

impl BasicMap {
  #[inline(always)]
  pub fn add_constraint(self, constraint: Constraint) -> Option<BasicMap> {
    unsafe {
      let ret = isl_basic_map_add_constraint(self.to(), constraint.to());
      (ret).to()
    }
  }
}

impl BasicMapRef {
  #[inline(always)]
  pub fn n_constraint(self) -> c_int {
    unsafe {
      let ret = isl_basic_map_n_constraint(self.to());
      (ret).to()
    }
  }
  #[inline(always)]
  pub fn foreach_constraint<F1: FnMut(Constraint) -> Stat>(self, fn_: &mut F1) -> Stat {
    unsafe extern "C" fn fn1<F: FnMut(Constraint) -> Stat>(c: Constraint, user: *mut c_void) -> Stat { (*(user as *mut F))(c.to()) }
    unsafe {
      let ret = isl_basic_map_foreach_constraint(self.to(), fn1::<F1>, fn_ as *mut _ as _);
      (ret).to()
    }
  }
  #[inline(always)]
  pub fn get_constraint_list(self) -> Option<ConstraintList> {
    unsafe {
      let ret = isl_basic_map_get_constraint_list(self.to());
      (ret).to()
    }
  }
  #[inline(always)]
  pub fn has_defining_equality(self, type_: DimType, pos: c_int) -> Option<(Bool, Constraint)> {
    unsafe {
      let ref mut c = 0 as *mut c_void;
      let ret = isl_basic_map_has_defining_equality(self.to(), type_.to(), pos.to(), c as *mut _ as _);
      (ret, *c).to()
    }
  }
}

impl BasicSet {
  #[inline(always)]
  pub fn add_constraint(self, constraint: Constraint) -> Option<BasicSet> {
    unsafe {
      let ret = isl_basic_set_add_constraint(self.to(), constraint.to());
      (ret).to()
    }
  }
}
